# StreamlitAntdComponents

./: .gitignore  hatch_build_hook.py  pyproject.toml
streamlit_antd_components/: __init__.py
streamlit_antd_components/frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
streamlit_antd_components/frontend/src/: index.tsx
streamlit_antd_components/frontend/src/js/: utils.react.jsx
streamlit_antd_components/frontend/src/ts/: Buttons.tsx  Cascader.tsx  Checkbox.tsx  Chip.tsx  Menu.tsx  Result.tsx  Tabs.tsx  Tag.tsx  Transfer.tsx  Tree.tsx  utils.tsx
streamlit_antd_components/utils/: __init__.py  component_func.py
streamlit_antd_components/widgets/: buttons.py  cascader.py  checkbox.py  chip.py  menu.py  pagination.py  rate.py  segmented.py  steps.py  switch.py  tabs.py  transfer.py  tree.py
